--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 rdkit
+scipy
+plotly
+kaleido
 opencv-python-headless
 argparse
 numpy
 cirpy
-svgwrite
 svglib
 reportlab
 pdf2image
 streamlit
+shutil
+requests
+io
+xml
+
